made overflow media query to avoid adding class from javascript, hard to work around with dropdown menus
(cherry picked from commit e838f22188267b8e39dc9b63a4faa795a601bb2e)

--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -15,6 +15,12 @@
     }
 }
 
+.overflow-h {
+    @include mq("header") {
+        overflow: hidden;
+    }
+}
+
 .padding-0 {
     @include mq("header") {
         padding: 0;
